ie fix on tablet 2

--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,7 @@ footer #countdown {
 @media screen and (max-width:991px) {
   #vtx-wheel {
     max-width: 360px;
+    min-height: 60vh;
   }
   .nodes:nth-of-type(2) .node-content, .nodes:nth-of-type(4) .node-content {
     top: -215px;
@@ -330,7 +331,7 @@ footer #countdown {
     width: 250px;
   }
   #vtx-wheel svg {
-    min-height: 0;
+    min-height: 60vh;
   }
 }
 @media screen and (max-width:767px) {
